--- a/Principia/Base.lproj/Main.storyboard
+++ b/Principia/Base.lproj/Main.storyboard
@@ -50,6 +50,42 @@
             </objects>
             <point key="canvasLocation" x="-84" y="-144"/>
         </scene>
+        <!--Level Selection2 View Controller - Select a level-->
+        <scene sceneID="hwI-E2-pZj">
+            <objects>
+                <collectionViewController autoresizesArchivedViewToFullSize="NO" id="Soc-Oc-8iV" customClass="DHLevelSelection2ViewController" sceneMemberID="viewController">
+                    <collectionView key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="0gJ-rg-tgQ">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="AOX-Rh-fuw">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PrototypeCell" id="pzA-xZ-ryb" customClass="DHLevelSelection2LevelCell">
+                                <rect key="frame" x="0.0" y="64" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="Soc-Oc-8iV" id="sti-QG-JpK"/>
+                            <outlet property="delegate" destination="Soc-Oc-8iV" id="H9f-DT-OL9"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" title="Select a level" id="gXx-Ie-Mf0"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wb1-ix-zoE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-84" y="1014"/>
+        </scene>
         <!--Level View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -837,6 +873,7 @@
                         <outletCollection property="layoutConstraintsPortrait" destination="vvz-gw-hod" id="vYJ-Np-xb0"/>
                         <outletCollection property="layoutConstraintsPortrait" destination="7Gc-DL-ZUb" id="Bkm-pN-hj2"/>
                         <segue destination="taf-kY-eNe" kind="push" identifier="ShowLevelSelection" id="fCc-qv-lTO"/>
+                        <segue destination="Soc-Oc-8iV" kind="push" identifier="ShowLevelSelection2" id="lcW-Gv-2gx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HkK-8y-Jrg" userLabel="First Responder" sceneMemberID="firstResponder"/>
