Disable edits after level is completed

--- a/Principia/Base.lproj/Main.storyboard
+++ b/Principia/Base.lproj/Main.storyboard
@@ -142,10 +142,10 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WOF-xF-LlD">
-                                        <rect key="frame" x="623" y="14" width="134" height="33"/>
+                                        <rect key="frame" x="644" y="14" width="113" height="33"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <state key="normal" title="More instructions">
+                                        <state key="normal" title="Full instruction">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                     </button>
@@ -924,7 +924,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="EuclidLogo" width="512" height="512"/>
+        <image name="EuclidLogo" width="200" height="200"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
